0.21.7	UNRELEASED

 * Fix NameError when encountering errors during HTTP operation.
   (Jelmer Vernooĳ, #1208)

 * Raise exception when default identity can't be found.
   (Jelmer Vernooĳ)

0.21.6	2023-09-02

 * index: Handle different stages of conflicted paths.
   (Kevin Hendricks, Jelmer Vernooĳ)

 * Improve LCA finding performance. (Kevin Hendricks)

 * client: Handle Content-Type with encoding set.
   (Antoine Lambert)

 * Only import _hashlib for type checking.
   (David Hotham)

 * Update docs regarding building dulwich without c bindings (#103)
   (Adam Plaice)

 * objects: Define a stricter return type for _parse_message
   (Vincent Lorentz)

 * Raise GitProtocolError when encountering HTTP Errors in
   HTTPGitClient. (Jelmer Vernooĳ, #1199)

0.21.5	2023-05-04

 * Be more tolerant to non-3-length tuple versions.
   (Jelmer Vernooĳ)

0.21.4.1	2023-05-04

 * Support ``core.symlinks=false``. (Jelmer Vernooĳ, #1169)

 * Deprecate ``dulwich.objects.parse_commit``.

 * Fix fetching into MemoryRepo. (Jelmer Vernooĳ, #1157)

 * Support ``init.defaultBranch`` config.
   (Jelmer Vernooĳ)

 * Fix ``ObjectStore.iterobjects_subset()`` when
   hex shas are passed for objects that live in packs.
   (Jelmer Vernooĳ, #1166)

 * client: Handle absolute path as redirect location in HTTP client.
   (Antoine Lambert)

0.21.3	2023-02-17

 * Add support for ``worktreeconfig`` extension.
   (Jelmer Vernooĳ)

 * Deprecate ``Commit.extra``; the Git project specifically
   discourages adding custom lines, and the contents of
   ``Commit.extra`` are unpredictable as contents
   may be different between different versions of Dulwich
   with support for different headers.

   ``Commit._extra`` still exists.
   (Jelmer Vernooĳ)

0.21.2	2023-01-18

 * Fix early file close bug in ``dulwich.pack.extend_pack``.
   (Jelmer Vernooĳ)

0.21.1	2023-01-17

 * Factor out ``dulwich.pack.extend_pack``.
   (Jelmer Vernooĳ)

0.21.0	2023-01-16
